force-app/main/default/objects/TrainingRole__c.object
<CustomObject>
    <fields>
        <fullName>EXT_Training_Role_ID__c</fullName>
        <externalId>true</externalId>
        <label>EXT_Training_Role_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Will be used in Caliber to determine access levels to Training data.</description>
        <label>Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Co-Trainer</fullName>
                </value>
                <value>
                    <fullName>QC</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Training Roles</relationshipLabel>
        <relationshipName>Training_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROLE-{00000000}</displayFormat>
        <label>Training Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>